ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_early_return_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (11) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (14) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (16) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (17) at (2, 3) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytestfoo, [0], [0])};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (4, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (6, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (30) at (4, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (31) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (32) at (6, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (33) at (4, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (34) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (35) at (6, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (4, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (37) at (5, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (38) at (6, 3) {};
\node[font=\tiny] (note_7) at (2.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_8) at (2.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_9) at (2.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (8, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (9, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (5) at (10, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (8, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (19) at (9, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (20) at (10, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (8, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (22) at (9, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (23) at (10, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (8, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (25) at (9, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (26) at (10, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (27) at (8, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (28) at (9, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (29) at (10, 4) {};
\node[font=\tiny] (note_3) at (6.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (6.5, 1.5) {Return([0])};
\node[font=\tiny] (note_5) at (6.5, 2.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (6.5, 3.5) {Return([1])};
		\path[->] (0) edge (10);
		\path[->] (0) edge (9);
		\path[->] (2) edge (11);
		\path[->] (9) edge node { } (12);
		\path[->] (10) edge node { } (13);
		\path[->] (12) edge node { } (15);
		\path[->] (14) edge node { } (17);
		\path[->] (3) edge (19);
		\path[->] (3) edge (18);
		\path[->] (5) edge (20);
		\path[->] (18) edge (21);
		\path[->] (19) edge (22);
		\path[->] (20) edge (23);
		\path[->, red] (18) [bend right] edge  node { } (12);
		\path[->, red] (19) [bend right] edge  node { } (14);
		\path[->] (21) edge (26);
		\path[->] (21) edge (24);
		\path[->] (22) edge (25);
		\path[->] (24) edge (27);
		\path[->] (25) edge (28);
		\path[->] (26) edge (29);
		\path[->, red] (24) [bend right] edge  node { } (12);
		\path[->, red] (26) [bend right] edge  node { } (14);
		\path[->] (6) edge (31);
		\path[->] (6) edge (30);
		\path[->] (8) edge (32);
		\path[->] (30) edge (35);
		\path[->] (30) edge (33);
		\path[->] (31) edge (34);
		\path[->] (33) edge (36);
		\path[->] (34) edge (37);
		\path[->] (35) edge (38);
		\path[->, red] (33) [bend right] edge  node { } (15);
		\path[->, red] (34) [bend right] edge  node { } (16);
		\path[->, green] (9) [bend left] edge node { } (3);
		\path[->, green] (10) [bend left] edge node { } (4);
		\path[->, green] (12) [bend left] edge node { } (6);
		\path[->, green] (13) [bend left] edge node { } (7);


                \end{tikzpicture}
            \end{document}
