ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_functions.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "format!(\"{:#?}\", res)"

---
Graph {
    vars: {
        "test": [
            Variable {
                id: "taut",
                last_fact: [
                    Fact {
                        id: 2,
                        note: "<b>taut</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 0,
                        note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%0",
                last_fact: [
                    Fact {
                        id: 3,
                        note: "<b>%0</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 1,
                        note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
        ],
        "mytest": [
            Variable {
                id: "taut",
                last_fact: [
                    Fact {
                        id: 6,
                        note: "<b>taut</b> at 3<br/>Const(\"%0\", 2.0)",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 6,
                        note: "<b>taut</b> at 3<br/>Const(\"%0\", 2.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%0",
                last_fact: [
                    Fact {
                        id: 7,
                        note: "<b>%0</b> at 3<br/>Const(\"%0\", 2.0)",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 7,
                        note: "<b>%0</b> at 3<br/>Const(\"%0\", 2.0)",
                    },
                ),
                killed: false,
            },
        ],
    },
    facts: [
        Fact {
            id: 0,
            note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 1,
            note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 2,
            note: "<b>taut</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
        },
        Fact {
            id: 3,
            note: "<b>%0</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
        },
        Fact {
            id: 4,
            note: "<b>taut</b> at 2<br/>Return from mytest",
        },
        Fact {
            id: 5,
            note: "<b>%0</b> at 2<br/>Return from mytest",
        },
        Fact {
            id: 6,
            note: "<b>taut</b> at 3<br/>Const(\"%0\", 2.0)",
        },
        Fact {
            id: 7,
            note: "<b>%0</b> at 3<br/>Const(\"%0\", 2.0)",
        },
    ],
    edges: [
        Normal {
            from: Fact {
                id: 0,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 2,
                note: "<b>taut</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
            },
        },
        Normal {
            from: Fact {
                id: 1,
                note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
            },
        },
        CallToReturn {
            from: Fact {
                id: 2,
                note: "<b>taut</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
            },
            to: Fact {
                id: 4,
                note: "<b>taut</b> at 2<br/>Return from mytest",
            },
        },
        CallToReturn {
            from: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
            },
            to: Fact {
                id: 5,
                note: "<b>%0</b> at 2<br/>Return from mytest",
            },
        },
        Call {
            from: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Call(\"mytest\", [\"%0\"])",
            },
            to: Fact {
                id: 7,
                note: "<b>%0</b> at 3<br/>Const(\"%0\", 2.0)",
            },
        },
    ],
    counter: Counter {
        counter: 8,
    },
    epoch: Counter {
        counter: 4,
    },
}
