ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_global_call_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (6) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (7) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (9) at (4, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (10) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (31) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (32) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (33) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (34) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (35) at (4, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (36) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (37) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (38) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (39) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (40) at (3, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (41) at (4, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (42) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (43) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (44) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (45) at (2, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (46) at (3, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (47) at (4, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (48) at (5, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (49) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (50) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (51) at (2, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (52) at (3, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (53) at (4, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (54) at (5, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (55) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (56) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (57) at (2, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (58) at (3, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (59) at (4, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (60) at (5, 5) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (61) at (0, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (62) at (1, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (63) at (2, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (64) at (3, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (65) at (4, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (66) at (5, 6) {};
\node[font=\tiny] (note_4) at (-1.5, 0.5) {Block(1)};
\node[font=\tiny] (note_5) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 2.5) {Call(0, [1], [])};
\node[font=\tiny] (note_7) at (-1.5, 3.5) {Assign(2, 0)};
\node[font=\tiny] (note_8) at (-1.5, 4.5) {Assign(-2, 2)};
\node[font=\tiny] (note_9) at (-1.5, 5.5) {Return([])};
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (7, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (1) at (8, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (2) at (9, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (10, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (4) at (11, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (7, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (12) at (8, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (13) at (9, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (14) at (10, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (15) at (11, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (7, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (17) at (8, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (18) at (9, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (19) at (10, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (20) at (11, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (7, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (22) at (8, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (23) at (9, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (24) at (10, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (25) at (11, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (7, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%-2] (27) at (8, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%-1] (28) at (9, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (29) at (10, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (30) at (11, 4) {};
\node[font=\tiny] (note_0) at (5.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_2) at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] (note_3) at (5.5, 3.5) {Return([])};
		\path[->] (0) edge (11);
		\path[->] (1) edge (12);
		\path[->] (2) edge (13);
		\path[->] (3) edge (14);
		\path[->] (4) edge (15);
		\path[->] (14) edge (20);
		\path[->] (11) edge (16);
		\path[->] (12) edge (17);
		\path[->] (13) edge (18);
		\path[->] (14) edge (19);
		\path[->] (20) edge (23);
		\path[->] (16) edge (21);
		\path[->] (17) edge (22);
		\path[->] (19) edge (24);
		\path[->] (20) edge (25);
		\path[->] (21) edge (26);
		\path[->] (22) edge (27);
		\path[->] (23) edge (28);
		\path[->] (24) edge (29);
		\path[->] (25) edge (30);
		\path[->] (5) edge (31);
		\path[->] (6) edge (32);
		\path[->] (7) edge (33);
		\path[->] (8) edge (34);
		\path[->] (9) edge (35);
		\path[->] (10) edge (36);
		\path[->] (31) edge (41);
		\path[->] (31) edge (37);
		\path[->] (32) edge (38);
		\path[->] (33) edge (39);
		\path[->] (34) edge (40);
		\path[->] (36) edge (42);
		\path[->] (37) edge node { } (43);
		\path[->] (40) edge node { } (46);
		\path[->] (41) edge node { } (47);
		\path[->] (42) edge node { } (48);
		\path[->] (46) edge (54);
		\path[->] (43) edge (49);
		\path[->] (44) edge (50);
		\path[->] (45) edge (51);
		\path[->] (46) edge (52);
		\path[->] (47) edge (53);
		\path[->] (54) edge (56);
		\path[->] (49) edge (55);
		\path[->] (51) edge (57);
		\path[->] (52) edge (58);
		\path[->] (53) edge (59);
		\path[->] (54) edge (60);
		\path[->] (55) edge (61);
		\path[->] (56) edge (62);
		\path[->] (57) edge (63);
		\path[->] (58) edge (64);
		\path[->] (59) edge (65);
		\path[->] (60) edge (66);
		\path[->, red] (26) [bend right] edge  node { } (43);
		\path[->, red] (27) [bend right] edge  node { } (44);
		\path[->, red] (28) [bend right] edge  node { } (45);
		\path[->, green] (37) [bend left] edge node { } (0);
		\path[->, green] (38) [bend left] edge node { } (1);
		\path[->, green] (39) [bend left] edge node { } (2);
		\path[->, green] (41) [bend left] edge node { } (3);


                \end{tikzpicture}
            \end{document}
