ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_global_get_and_set_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (13) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%-2] (12) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (9) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(-2, 1)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->] (0) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (0) edge (9);
		\path[->] (0) edge (10);
		\path[->] (6) edge (11);
		\path[->] (9) edge (12);
		\path[->] (9) edge (13);


                \end{tikzpicture}
            \end{document}
