ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (0, 0) { };
\node[font=\tiny] (note_4) at (-1.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_5) at (-1.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:\%1] (28) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%-2] (27) at (5, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (26) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%-2] (25) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (22) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%-2] (21) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (12) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (4, 0) { };
\node[font=\tiny] (note_0) at (2.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] (note_1) at (2.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] (note_2) at (2.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] (note_3) at (2.5, 3.5) {Call(1, [2], [0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (15) [bend right] edge  node { } (18);
		\path[->, blue] (15) [bend right] edge  node { } (19);
		\path[->, blue] (15) [bend right] edge  node { } (20);
		\path[->, blue] (17) [loop right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (0) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (28);
		\path[->] (0) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (0) edge (12);
		\path[->] (0) edge (13);
		\path[->] (7) edge (14);
		\path[->] (15) edge (18);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (12) edge (21);
		\path[->] (12) edge (22);
		\path[->] (18) edge (23);
		\path[->] (19) edge (24);
		\path[->] (21) edge (25);
		\path[->] (22) edge (26);
		\path[->] (25) edge node { } (27);
		\path[->] (26) edge node { } (28);


                \end{tikzpicture}
            \end{document}
