ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_if_else_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (3) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (6) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (7) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (10) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (11) at (3, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (14) at (2, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (15) at (3, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (18) at (2, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (19) at (3, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (21) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (22) at (2, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (23) at (3, 5) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (25) at (1, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (26) at (2, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (27) at (3, 6) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (28) at (0, 7) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (29) at (1, 7) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (30) at (2, 7) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (31) at (3, 7) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (0, 8) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (33) at (1, 8) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (34) at (2, 8) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (35) at (3, 8) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (0, 9) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (37) at (1, 9) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (38) at (2, 9) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (39) at (3, 9) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (40) at (0, 10) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (41) at (1, 10) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (42) at (2, 10) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (43) at (3, 10) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (44) at (0, 11) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (45) at (1, 11) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (46) at (2, 11) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (47) at (3, 11) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (48) at (0, 12) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (49) at (1, 12) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (50) at (2, 12) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (51) at (3, 12) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (52) at (0, 13) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (53) at (1, 13) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (54) at (2, 13) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (55) at (3, 13) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Conditional(1)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Jump(1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Jump(2)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Block(1)};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Const(1, 2.0)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Const(2, 3.0)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Jump(3)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Block(2)};
\node[font=\tiny] (note_10) at (-1.5, 10.5) {Const(2, 4.0)};
\node[font=\tiny] (note_11) at (-1.5, 11.5) {Jump(3)};
\node[font=\tiny] (note_12) at (-1.5, 12.5) {Block(3)};
		\path[->] (0) edge (4);
		\path[->] (1) edge (5);
		\path[->] (2) edge (6);
		\path[->] (3) edge (7);
		\path[->] (4) edge (9);
		\path[->] (4) edge (8);
		\path[->] (6) edge (10);
		\path[->] (7) edge (11);
		\path[->] (8) edge (12);
		\path[->] (9) edge (13);
		\path[->] (10) edge (14);
		\path[->] (11) edge (15);
		\path[->, bend right] (12) edge (20);
		\path[->, bend right] (13) edge (21);
		\path[->, bend right] (14) edge (22);
		\path[->, bend right] (15) edge (23);
		\path[->, bend right] (16) edge (36);
		\path[->, bend right] (17) edge (37);
		\path[->, bend right] (18) edge (38);
		\path[->, bend right] (19) edge (39);
		\path[->] (20) edge (24);
		\path[->] (21) edge (25);
		\path[->] (22) edge (26);
		\path[->] (23) edge (27);
		\path[->] (24) edge (30);
		\path[->] (24) edge (28);
		\path[->] (25) edge (29);
		\path[->] (27) edge (31);
		\path[->] (28) edge (35);
		\path[->] (28) edge (32);
		\path[->] (29) edge (33);
		\path[->] (30) edge (34);
		\path[->, bend right] (32) edge (48);
		\path[->, bend right] (33) edge (49);
		\path[->, bend right] (34) edge (50);
		\path[->, bend right] (35) edge (51);
		\path[->] (36) edge (40);
		\path[->] (37) edge (41);
		\path[->] (38) edge (42);
		\path[->] (39) edge (43);
		\path[->] (40) edge (47);
		\path[->] (40) edge (44);
		\path[->] (41) edge (45);
		\path[->] (42) edge (46);
		\path[->, bend right] (44) edge (48);
		\path[->, bend right] (45) edge (49);
		\path[->, bend right] (46) edge (50);
		\path[->, bend right] (47) edge (51);
		\path[->] (48) edge (52);
		\path[->] (49) edge (53);
		\path[->] (50) edge (54);
		\path[->] (51) edge (55);


                \end{tikzpicture}
            \end{document}
